--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://2246f471-cc9e-4d49-b6c7-e6e0e9914748.preview.emergentagent.com
 WDS_SOCKET_PORT=443
